refactor： 优化项目结构，提升代码质量