@@ -1,11 +1,10 @@
 package com.shing.intelligentquiz.model.enums;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import lombok.Getter;
 import org.apache.commons.lang3.ObjectUtils;
+
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * 用户角色枚举
@@ -32,7 +31,7 @@ public enum UserRoleEnum {
      * 获取值列表
      */
     public static List<String> getValues() {
-        return Arrays.stream(values()).map(item -> item.value).collect(Collectors.toList());
+        return Arrays.stream(values()).map(item -> item.value).toList();
     }
 
     /**
